--- a/readme
+++ b/readme
@@ -148,3 +148,6 @@ Managing sessions with credentials: "include" in fetch
 Structuring top searches with MongoDB aggregation
 
 Styling and state management for multi-select grid
+
+by: teckchand purohit
+date: 02/11/2025
